[gd_scene load_steps=7 format=3 uid="uid://da5iixeh1n378"]

[ext_resource type="Texture2D" uid="uid://ctp055ogy1sqt" path="res://sprites/icon.svg" id="1_ksugd"]
[ext_resource type="Script" path="res://drink_dispenser.gd" id="1_uhiwn"]
[ext_resource type="Texture2D" uid="uid://c7vdsnds8q5eu" path="res://sprites/RectangleIconSlot.png" id="2_xwcq8"]

[sub_resource type="Animation" id="Animation_afacy"]
resource_name = "test_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_xwcq8")]
}

[sub_resource type="Animation" id="Animation_626pd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ksugd")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y5luk"]
_data = {
"RESET": SubResource("Animation_626pd"),
"test_animation": SubResource("Animation_afacy")
}

[node name="DrinkDispenser" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_uhiwn")

[node name="DrinkDispenserSprite" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 136.0
offset_bottom = 136.0
texture = ExtResource("1_ksugd")

[node name="DispenseButton" type="Button" parent="."]
layout_mode = 2
offset_right = 136.0
offset_bottom = 136.0
icon = ExtResource("2_xwcq8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DispenseButton"]
libraries = {
"": SubResource("AnimationLibrary_y5luk")
}

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 4.0
offset_top = 146.0
offset_right = 132.0
offset_bottom = 274.0
texture = ExtResource("1_ksugd")

[connection signal="button_down" from="DispenseButton" to="." method="_on_dispense_button_button_down"]
[connection signal="button_up" from="DispenseButton" to="." method="_on_dispense_button_button_up"]
[connection signal="pressed" from="DispenseButton" to="." method="_on_dispense_button_pressed"]
